--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "vite": "^4.3.2",
-    "whatwg-fetch": "^3.6.19"
+    "vite": "^4.3.2"
   }
 }
